--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,38 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-size: 40px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  font-size: 30px;
+  text-align: center;
+  margin-top: 0px;
+}
+
+button {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+  border: 5px solid darkgoldenrod;
+  font-size: 35px;
+  color: darkgoldenrod;
+}
+
+button:hover:before,
+button:hover:after {
+  background: #fff;
+  transition: 0.2s;
+}
+
+button:hover {
+  color: #fff;
+  background-color: darkgoldenrod;
+  transition: 0.2s;
 }
